@@ -1,3 +1,12 @@
+2007-06-27  Steve Falkenburg  <sfaken@apple.com>
+
+        Remove SEH block from around history plist read, since the underlying bug has been fixed.
+        
+        Reviewed by Darin.
+
+        * WebHistory.cpp:
+        (createHistoryListFromStream):
+
 2007-06-27  Steve Falkenburg  <sfalken@apple.com>
 
         Prefast: Fix misplaced parenthesis.
